chore(project): styling, fixed issue-report routing, user clear history routing
