# backend/routes/issue-report-route.js
@@ -3,7 +3,6 @@ import {
   addIssueSetBackReport,
   addReviewToIssueReportReview,
   closeIssueReport,
-  createIssueReport,
   getAllIssueReports,
   getIssueReportById,
 } from '../controllers/issue-report-controller.js';
@@ -13,7 +12,6 @@ const router = express.Router();
 router.use('/maintenance', authMaintenance);
 router.get('/maintenance/issue-reports', getAllIssueReports);
 router.get('/maintenance/issue-reports/:id', getIssueReportById);
-router.post('/maintenance/issue-report', createIssueReport);
 router.put('/maintenance/issue-report/:id/review', addReviewToIssueReportReview);
 router.put('/maintenance/issue-report/:id/add-setback', addIssueSetBackReport);
 router.put('/maintenance/issue-report/:id/close', closeIssueReport);
