# backend/swagger.json
@@ -127,6 +127,64 @@
         "x-swagger-router-controller": "Venues"
       }
     },
+    "/venues/{venueId}/issue-report": {
+      "post": {
+        "tags": ["Venues"],
+        "summary": "Create a new issue report",
+        "description": "Create a new issue report with an optional image upload.",
+        "operationId": "createIssueReport",
+        "parameters": [
+          {
+            "name": "venueId",
+            "in": "path",
+            "description": "ID of the venue",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "description": {
+                    "type": "string"
+                  },
+                  "images": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Issue report created successfully"
+          },
+          "500": {
+            "description": "Internal server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
+      }
+    },
     "/venues/{venueId}/reservations": {
       "get": {
         "tags": ["Venues"],
@@ -255,6 +313,51 @@
                     "error": {
                       "type": "string",
                       "example": "User role not found"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/user/history": {
+      "delete": {
+        "summary": "Get user role",
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "tags": ["User"],
+        "responses": {
+          "200": {
+            "description": "User role",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "History cleared"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "No history found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "No history found"
                     }
                   }
                 }
@@ -1006,56 +1109,6 @@
                 }
               }
             }
-          },
-          "500": {
-            "description": "Internal server error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        },
-        "security": [
-          {
-            "BearerAuth": []
-          }
-        ]
-      }
-    },
-    "/maintenance/issue-report": {
-      "post": {
-        "tags": ["Maintenance"],
-        "summary": "Create a new issue report",
-        "description": "Create a new issue report with an optional image upload.",
-        "operationId": "createIssueReport",
-        "requestBody": {
-          "required": true,
-          "content": {
-            "multipart/form-data": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "venueId": {
-                    "type": "string"
-                  },
-                  "issueDescription": {
-                    "type": "string"
-                  },
-                  "image": {
-                    "type": "string",
-                    "format": "binary"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "Issue report created successfully"
           },
           "500": {
             "description": "Internal server error",
